adjusting divs to fix on smaller screen sizes

--- a/main/new.css
+++ b/main/new.css
@@ -318,6 +318,15 @@ margin-left: 10%;
         padding: 40px 40px 40px 40px;
     }
 
+    .div-three{
+        display: flex;
+        color: #1f1d1d;
+        float: right;
+        margin-right: 2em;
+        margin-top: -10em;
+        padding: 40px 40px 40px 40px;
+    }
+
     .practice_header{
         text-transform: uppercase;
         margin-right: 20px;
